# JobTrend

./: .dockerignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.json
api/: main.py
dashboard/: app.py
data/: clean_jobs.csv  jobs.db  raw_jobs.json
database/: models.py
processing/: __init__.py  processor.py
scraper/: __init__.py  indeed_scraper.py  linkedin_scraper.py
utils/: helpers.py
